增加支付宝动效

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="drawerItemChecked">#FFF</color>
     <color name="drawerItemDefault">#DDD</color>
 
+    <color name="transparent">#00000000</color>
+    <color name="white">#ffffff</color>
+    <color name="blue_dark">#1983d1</color>
+    <color name="blue_black">#1673b8</color>
 </resources>
